# ha-gitops

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  README_ru.md  hacs.json  info.md  pyproject.toml
.cursor/rules/: code-style.mdc  general.mdc  git-conventions.mdc  hacs.mdc  home-assistant.mdc  project-layout.mdc  security.mdc  testing.mdc
.github/workflows/: release.yml  validate.yml
custom_components/ha_gitops/: __init__.py  button.py  config_flow.py  const.py  git_manager.py  manifest.json  repairs.py  sensor.py  services.yaml  strings.json
custom_components/ha_gitops/translations/: ru.json
docs/: architecture.md
tests/: conftest.py  test_button.py  test_config_flow.py  test_initialize.py  test_inspection_snapshot.py  test_operations.py  test_repairs.py  test_sensor.py  test_service.py  test_setup.py  test_smoke.py  test_ssh_keygen.py  test_status.py
