[project]
name = "ha-gitops-dev"
version = "0.0.0"
description = "Development environment for the ha_gitops Home Assistant integration"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Constantine Krylov" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "pytest-homeassistant-custom-component>=0.13",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.10",
  "gitpython>=3.1.43,<4",
]

# The repository is not a packaged Python project — the actual integration
# lives in `custom_components/ha_gitops/` and is loaded by Home Assistant
# at runtime, not installed via pip. Marking the workspace root as
# `package = false` tells uv to skip the editable build step that would
# otherwise create an `__editable__` finder hook on `sys.path`. That hook
# breaks `homeassistant.loader._async_get_custom_components`, which calls
# `Path.iterdir()` over every `sys.path` entry.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ASYNC", "PTH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use sync subprocess.run for readability — the test loop
# is short-lived and doesn't share an event loop with production code.
"tests/**" = ["N802", "N803", "ASYNC221"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "docs"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["custom_components/ha_gitops"]

[[tool.mypy.overrides]]
module = ["homeassistant.*", "voluptuous.*", "git.*", "gitdb.*", "smmap.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error::DeprecationWarning"]
